# empresa

empresa-git/: .editorconfig  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  LICENSE  Makefile  README.md  aplicacion.sh  commitlint.config.cjs  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml
empresa-git/.github/: PULL_REQUEST_TEMPLATE.md
empresa-git/.github/ISSUE_TEMPLATE/: bug.md  feature.md
empresa-git/apps/api/: Dockerfile  (+3 more)
empresa-git/docs/: API.md  ARCH.md  DEPLOY.md  LLM.md  SEC_RGPD.md
empresa-git/prompts/: prompt.txt
empresa-git/services/py-quality/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
empresa-git/services/py-quality/app/: __init__.py  config.py  io_utils.py  main.py
empresa-git/services/py-quality/app/detectors/: __init__.py  currency.py  dates.py  duplicates.py  email.py  id_sku.py  nif_cif_basic.py  phone_es.py  price.py
empresa-git/services/py-quality/app/normalizers/: __init__.py  currency.py  dates.py  phone.py  text.py
empresa-git/services/py-quality/app/routers/: __init__.py  fixes.py  health.py  infer.py  issues.py
empresa-git/services/py-quality/app/schemas/: __init__.py  dto.py  types.py
empresa-git/services/py-quality/app/services/: __init__.py  fixes_service.py  infer_service.py  issues_service.py
empresa-git/services/py-quality/app/utils/: __init__.py  hashing.py  idgen.py  sampling.py
empresa-git/services/py-quality/tests/: conftest.py  test_apply_integration.py  test_fixes_preview_unit.py  test_health.py  test_infer_unit.py  test_issues_unit.py
(+95 files in other folders)
